# smart_learning_ai

./: .gitignore  README.md  RECOMMENDER_README.md  pyproject.toml  requirements.txt
data/: database_code.sqlite
models/: GradientBoosting.pkl  LinearRegression.pkl  RandomForest.pkl
notebooks/: analysis_demo.ipynb
src/: random_test_data.py  visualization.py
src/analytics/: analytics.py
src/cli/: main.py
src/db/: database.py
src/ml/: __init__.py  features.py  model.py  predict.py  preprocessing.py  train.py
src/models/: session.py  subject.py
src/recommender/: recommender.py
tests/: conftest.py  test_advanced.py  test_analytics.py  test_cli.py  test_database.py  test_insights.py  test_models.py  test_recommender.py
