[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-learning-ai"
version = "0.1.0"
description = "Smart learning analytics tool"
authors = [
    {name = "AkArtem"}
]
requires-python = ">=3.10"

dependencies = [
    "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
